--- a/sclp/Makefile
+++ b/sclp/Makefile
@@ -1,9 +1,9 @@
-OBJ_GEN = scanner.o parser.o ast.o ast-compile.o icode.o program.o procedure.o program-compile.o procedure-compile.o
+OBJ_GEN = scanner.o parser.o ast.o ast-compile.o icode.o cfg.o program.o procedure.o program-compile.o procedure-compile.o
 OBJ_CORE = main.o
 OBJ = $(OBJ_GEN) $(OBJ_CORE) 
 
 
-HEADERS_CORE = error-display.hh user-options.hh ast.hh symbol-table.hh program.hh procedure.hh common-classes.hh icode.hh 
+HEADERS_CORE = error-display.hh user-options.hh ast.hh symbol-table.hh program.hh procedure.hh common-classes.hh icode.hh cfg.hh
 HEADERS_GEN = parser.h parser.ih parserbase.h scanner.h scanner.ih scannerbase.h
 
 HEADERS = $(HEADERS_CORE) $(HEADERS_GEN)
@@ -19,7 +19,7 @@ CFLAGS = -g
 #change -lreference to -lreference14 for ubuntu14.04 in the target below
 
 $(TGT): $(OBJ) 
-	$(CPP) --std=c++0x -L. -Wl,-rpath=. $(option) $(OBJ) -o $(TGT) -lreference14
+	$(CPP) --std=c++0x -L. -Wl,-rpath=. $(option) $(OBJ) -o $(TGT) -lreference
 
 %.o: %.cc $(HEADERS)
 	$(CPP) --std=c++0x $(option) $(CFLAGS) -c $<
@@ -35,4 +35,4 @@ parser.cc: parser.yy parser.ih parser.h
 
 clean :
 	rm -f *.o scannerbase.h parserbase.h scanner.cc parser.cc parser.yy.output
-	rm -f sclp gmon.out
+	rm -f cscope.out tags a.out sclp gmon.out
